workspace(
    name = "lsh-lc",
    managed_directories = {
        "@npm": ["node_modules"],
    },
)

load("//tools:bazel_deps.bzl", "fetch_build_bazel_rules_nodejs")

fetch_build_bazel_rules_nodejs()

load("@build_bazel_rules_nodejs//:index.bzl", "yarn_install")

yarn_install(
    name = "npm",
    exports_directories_only = True,
    package_json = "//:package.json",
    yarn_lock = "//:yarn.lock",
)
