workspace(
    name = "lsh-lc",
    managed_directories = {
        "@npm": ["node_modules"],
    },
)

load("//tools:bazel_deps.bzl", "fetch_build_bazel_rules_nodejs")

fetch_build_bazel_rules_nodejs()

load("@build_bazel_rules_nodejs//:repositories.bzl", "build_bazel_rules_nodejs_dependencies")

build_bazel_rules_nodejs_dependencies()

load("@build_bazel_rules_nodejs//:index.bzl", "yarn_install")

yarn_install(
    name = "npm",
    package_json = "//:package.json",
    quiet = False,
    yarn_lock = "//:yarn.lock",
)
