load("//tools:index.bzl", "jest_test")

exports_files(
    [
        "list-node.ts",
        "tree-node.ts",
        "types.ts",
    ],
    visibility = ["//:__subpackages__"],
)

jest_test(
    name = "test-ts",
    srcs = glob(["**/*.spec.ts"]) + ["tree-node-old.ts"],  # Note: list-node, tree-node are included in `jest_test` macro
)
